修改为php路径

--- a/html/addaddress.html
+++ b/html/addaddress.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>添加收货地址</title>
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/LArea.min.css">
-    <link rel="stylesheet" href="../css/addaddress.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/LArea.min.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/addaddress.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav">
@@ -48,12 +48,12 @@
 <footer id="nmbSubmit">完成</footer>
 
 
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/LAreaData1.js"></script>
-<script src="../js/LAreaData2.js"></script>
-<script src="../js/LArea.min.js"></script>
-<script src="../js/config.js"></script>
-<script src="../js/common.js"></script>
-<script src="../js/addAddress.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/LAreaData1.js"></script>
+<script src="__MARKET_JS__/LAreaData2.js"></script>
+<script src="__MARKET_JS__/LArea.min.js"></script>
+<script src="__MARKET_JS__/config.js"></script>
+<script src="__MARKET_JS__/common.js"></script>
+<script src="__MARKET_JS__/addAddress.js"></script>
 </body>
 </html>
