--- a/html/adminaddress.html
+++ b/html/adminaddress.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>收货地址</title>
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/adminaddress.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/adminaddress.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav">
@@ -37,11 +37,11 @@
         </li>
     </ul>
 </nav>
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/handlebars-v4.0.10.js"></script>
-<script src="../js/common.js"></script>
-<script src="../js/api.2.0.js"></script>
-<script src="../js/aui-list-swipe.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/handlebars-v4.0.10.js"></script>
+<script src="__MARKET_JS__/common.js"></script>
+<script src="__MARKET_JS__/api.2.0.js"></script>
+<script src="__MARKET_JS__/aui-list-swipe.js"></script>
 <script>
     var swipe = new auiListSwipe(function(ret){
         // console.log(ret)
