--- a/html/commodity.html
+++ b/html/commodity.html
@@ -5,11 +5,11 @@
     <title>商品中心</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/commodity.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/commodity.css">
 </head>
 <body>
 <!--搜索框-->
@@ -62,7 +62,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -87,7 +87,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -112,7 +112,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -137,7 +137,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -162,7 +162,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -187,7 +187,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -212,7 +212,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -237,7 +237,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -262,7 +262,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -287,7 +287,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -312,7 +312,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -337,7 +337,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -362,7 +362,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -414,9 +414,9 @@
     </a>
 </footer>
 
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/api.2.0.js"></script>
-<script src="../js/search.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/api.2.0.js"></script>
+<script src="__MARKET_JS__/search.js"></script>
 <script>
     $(document).ready(function () {
         /*筛选按钮的切换*/
