--- a/html/friends.html
+++ b/html/friends.html
@@ -5,10 +5,10 @@
     <title>朋友圈</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/friends.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/friends.css">
 </head>
 <body>
 <section>
@@ -32,19 +32,19 @@
                     <p class="friends-detail-text1">#周末福利#</p>
                     <span class="friends-detail-text2">纳尼？水果，果汁，零食，这么便宜?</span>
                     <ul class="friends-box-detail-ul">
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
                         <div class="friends-detail-bottom"><span>一键发朋友圈</span></div>
                     </ul>
                     <!--用户头像-->
-                    <div class="friends-box-detail-tx"><img src="../images/tx.png" alt=""></div>
+                    <div class="friends-box-detail-tx"><img src="__MARKET_IMG__/tx.png" alt=""></div>
 
                 </div>
             </li>
@@ -55,19 +55,19 @@
                     <p class="friends-detail-text1">#周末福利#</p>
                     <span class="friends-detail-text2">纳尼？水果，果汁，零食，这么便宜?</span>
                     <ul class="friends-box-detail-ul">
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
                         <div class="friends-detail-bottom"><span>一键发朋友圈</span></div>
                     </ul>
                     <!--用户头像-->
-                    <div class="friends-box-detail-tx"><img src="../images/tx.png" alt=""></div>
+                    <div class="friends-box-detail-tx"><img src="__MARKET_IMG__/tx.png" alt=""></div>
 
                 </div>
             </li>
@@ -78,19 +78,19 @@
                     <p class="friends-detail-text1">#周末福利#</p>
                     <span class="friends-detail-text2">纳尼？水果，果汁，零食，这么便宜?</span>
                     <ul class="friends-box-detail-ul">
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
-                        <li><img src="../images/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
+                        <li><img src="__MARKET_IMG__/22.jpg" alt=""></li>
                         <div class="friends-detail-bottom"><span>一键发朋友圈</span></div>
                     </ul>
                     <!--用户头像-->
-                    <div class="friends-box-detail-tx"><img src="../images/tx.png" alt=""></div>
+                    <div class="friends-box-detail-tx"><img src="__MARKET_IMG__/tx.png" alt=""></div>
 
                 </div>
             </li>
@@ -106,13 +106,13 @@
             </div>
             <div class="friendsshare-item-con"><textarea class="friendsshare-con-textarea" rows="10" cols="30">1当日，记者在现场看到，这朵神秘巨型蘑菇大小堪比簸箕，呈不规则形，分成了高低不同的几层“平台”，好似由几朵蘑菇组成，实则连成一体。蘑菇正面看上去类似木纹呈土褐色，背面则由很多细小的褶皱构成，富含水分。2蘑菇正面看上去类似木纹呈土褐色，背面则由很多细小的褶皱构成，富含水分。3蘑菇正面看上去类似木纹呈土褐色，背面则由很多细小的褶皱构成，富含水分。</textarea>
                 <div class="friendsshare-con-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
             </div>
         </div>
     </div>
 </section>
-<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
 <script>
     $('.friends-detail-bottom').click(function () {
         $('.friends-share').toggle()
