--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -5,12 +5,12 @@
     <title>商品详情页</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/aui-slide.css">
-    <link rel="stylesheet" href="../css/goodsdetail.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui-slide.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/goodsdetail.css">
 </head>
 <body>
 <section>
@@ -148,21 +148,21 @@
         </div>
     </section>
     <!--<footer class="goodsdetail-footer">
-        <div class="goodsdetail-footer-gwc"><img src="../images/gwc.png" alt=""></div>
+        <div class="goodsdetail-footer-gwc"><img src="__MARKET_IMG__/gwc.png" alt=""></div>
         <div class="goodsdetail-footer-join"><span>加入购物车</span></div>
         <div class="goodsdetail-footer-buy"><span>立刻购买</span></div>
     </footer>-->
 
 
 </section>
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/api.2.0.js"></script>
-<script src="../js/aui-slide.js"></script>
-<script src="../js/config.js"></script>
-<script src="../js/function.js"></script>
-<script src="../js/handlebars-v4.0.10.js"></script>
-<script src="../js/common.js"></script>
-<script src="../js/goods-detail.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/api.2.0.js"></script>
+<script src="__MARKET_JS__/aui-slide.js"></script>
+<script src="__MARKET_JS__/config.js"></script>
+<script src="__MARKET_JS__/function.js"></script>
+<script src="__MARKET_JS__/handlebars-v4.0.10.js"></script>
+<script src="__MARKET_JS__/common.js"></script>
+<script src="__MARKET_JS__/goods-detail.js"></script>
 <script>
     //轮播图
     var slide3 = new auiSlide({
