--- a/html/my.html
+++ b/html/my.html
@@ -5,18 +5,18 @@
     <title>我的</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/my.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/my.css">
 </head>
 <body>
 
 <div class="my-box1" id="my-box1">
     <script type="text/x-handlebars-template" id="my-template">
         <header>
-            <img class="user-photo" src="../images/user.jpg" alt="">
+            <img class="user-photo" src="__MARKET_IMG__/user.jpg" alt="">
             <div class="member-info">
                 <div>{{userNickName}}</div>
                 <div>{{userPhone}}</div>
@@ -124,9 +124,9 @@
         </div>
     </a>
 </footer>
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/config.js"></script>
-<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/config.js"></script>
+<script src="__MARKET_JS__/handlebars-v4.0.10.js"></script>
 <script>
     var a=$('#my-template').html();
     var b=Handlebars.compile(a);
