--- a/html/notice.html
+++ b/html/notice.html
@@ -5,10 +5,10 @@
     <title>平台公告</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/lessstyle.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/lessstyle.css">
 </head>
 <body>
 
