--- a/html/othersshop.html
+++ b/html/othersshop.html
@@ -5,15 +5,15 @@
     <title>别人的店铺</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/othershop.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/othershop.css">
 </head>
 <body>
 <header>
-    <img class="user-photo" src="../images/user.jpg" alt="">
+    <img class="user-photo" src="__MARKET_IMG__/user.jpg" alt="">
     <div class="member-info">
         <div>小一的店铺</div>
         <div class="clickshare"><span>分享他的店铺</span></div>
@@ -57,7 +57,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -83,7 +83,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -109,7 +109,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -135,7 +135,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -161,7 +161,7 @@
         <a href="javascript:;" class="display-box">
         <div class="dis-list-box">
             <div class="dis-shop-img">
-                <img src="../images/22.jpg" alt="">
+                <img src="__MARKET_IMG__/22.jpg" alt="">
             </div>
             <div class="dis-list-content">
                 <div class="dis-shop-detail">
@@ -187,7 +187,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -218,27 +218,27 @@
     <ul>
         <li class="my-share-li">
             <div class="my-share-li-img">
-                <img src="../images/pyq.png" alt="">
+                <img src="__MARKET_IMG__/pyq.png" alt="">
             </div>
             <p>朋友</p>
         </li>
         <li class="my-share-li">
             <div class="my-share-li-img">
-                <img src="../images/lj.png" alt="">
+                <img src="__MARKET_IMG__/lj.png" alt="">
             </div>
             <p>复制链接</p>
         </li>
         <li class="my-share-li">
             <div class="my-share-li-img">
-                <img src="../images/ewm.png" alt="">
+                <img src="__MARKET_IMG__/ewm.png" alt="">
             </div>
             <p>二维码</p>
         </li>
     </ul>
-    <div class="my-share-del1"><img src="../images/del1.png" alt=""></div>
+    <div class="my-share-del1"><img src="__MARKET_IMG__/del1.png" alt=""></div>
 </section>
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/api.2.0.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/api.2.0.js"></script>
 <script>
     $(document).ready(function () {
         /*筛选按钮的切换*/
