--- a/html/selected.html
+++ b/html/selected.html
@@ -5,10 +5,10 @@
     <title>单品精选</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
 </head>
 <body>
 <section>
@@ -58,7 +58,7 @@
             <!--<a href="javascript:;" class="display-box">
                 <div class="dis-list-box">
                     <div class="dis-shop-img">
-                        <img src="../images/22.jpg" alt="">
+                        <img src="__MARKET_IMG__/22.jpg" alt="">
                     </div>
                     <div class="dis-list-content">
                         <div class="dis-shop-detail">
@@ -96,12 +96,12 @@
 
             </div>
             <div class="wxmass-item-img">
-                <img src="../images/banner1.png" alt="">
+                <img src="__MARKET_IMG__/banner1.png" alt="">
             </div>
             <ul class="wxmass-item-list">
                 <li>
                     <div class="wxmass-item-list-img">
-                        <img src="../images/sends1.png" alt="">
+                        <img src="__MARKET_IMG__/sends1.png" alt="">
                     </div>
                     <span>发送给朋友</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
@@ -110,7 +110,7 @@
                 </li>
                 <li>
                     <div class="wxmass-item-list-img">
-                        <img src="../images/sends2.png" alt="">
+                        <img src="__MARKET_IMG__/sends2.png" alt="">
                     </div>
                     <span>分享到朋友圈</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
@@ -119,7 +119,7 @@
                 </li>
                 <li class="no-border">
                     <div class="wxmass-item-list-img">
-                        <img src="../images/sends3.png" alt="">
+                        <img src="__MARKET_IMG__/sends3.png" alt="">
                     </div>
                     <span>收藏</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
@@ -132,12 +132,12 @@
     </section>
 </section>
 
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/api.2.0.js"></script>
-<script src="../js/config.js"></script>
-<script src="../js/handlebars-v4.0.10.js"></script>
-<script src="../js/common.js"></script>
-<script src="../js/selected.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/api.2.0.js"></script>
+<script src="__MARKET_JS__/config.js"></script>
+<script src="__MARKET_JS__/handlebars-v4.0.10.js"></script>
+<script src="__MARKET_JS__/common.js"></script>
+<script src="__MARKET_JS__/selected.js"></script>
 <script>
     $('.dis-sale').click(function () {
         $('.wxmass-sends').toggle()
