--- a/html/tranfail.html
+++ b/html/tranfail.html
@@ -5,11 +5,11 @@
     <title>交易失败</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../css/aui.2.0.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common1.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/transuccess.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
+    <link rel="stylesheet" href="__MARKET_CSS__/transuccess.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav" id="aui-header">
@@ -29,7 +29,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -55,7 +55,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -81,7 +81,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -107,7 +107,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -133,7 +133,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -159,7 +159,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -185,7 +185,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -211,7 +211,7 @@
         <a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
+                    <img src="__MARKET_IMG__/22.jpg" alt="">
                 </div>
                 <div class="dis-list-content">
                     <div class="dis-shop-detail">
@@ -241,27 +241,27 @@
     <ul>
         <li class="my-share-li">
             <div class="my-share-li-img">
-                <img src="../images/pyq.png" alt="">
+                <img src="__MARKET_IMG__/pyq.png" alt="">
             </div>
             <p>朋友</p>
         </li>
         <li class="my-share-li">
             <div class="my-share-li-img">
-                <img src="../images/lj.png" alt="">
+                <img src="__MARKET_IMG__/lj.png" alt="">
             </div>
             <p>复制链接</p>
         </li>
         <li class="my-share-li">
             <div class="my-share-li-img">
-                <img src="../images/ewm.png" alt="">
+                <img src="__MARKET_IMG__/ewm.png" alt="">
             </div>
             <p>二维码</p>
         </li>
     </ul>
-    <div class="my-share-del1"><img src="../images/del1.png" alt=""></div>
+    <div class="my-share-del1"><img src="__MARKET_IMG__/del1.png" alt=""></div>
 </section>
-<script src="../js/jquery-3.0.0.min.js"></script>
-<script src="../js/api.2.0.js"></script>
+<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="__MARKET_JS__/api.2.0.js"></script>
 <script>
     $(document).ready(function () {
         /*筛选按钮的切换*/
